added the basic structure

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>web page</title>
 </head>
 <body>
-    
+    <header></header>
+    <main></main>
+    <header></header>
 </body>
 </html>
