add header text

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>web page</title>
 </head>
 <body>
-    <header></header>
+    <header>Header</header>
     <main></main>
     <header></header>
 </body>
