--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>web page</title>
+    <title>My website</title>
 </head>
 <body>
-    <header>Header</header>
-    <main></main>
-    <header></header>
+    <header>hello</header>
+
 </body>
 </html>
